# engram-memory

./: .gitignore  ENGRAM_BUILD_SPEC.md  HOW_TO_USE.md  LICENSE  pyproject.toml
engram/: .env.example  README.md  __init__.py  config.py  main.py  requirements.txt
engram/api/v1/: __init__.py  auth.py  memories.py  tools.py
engram/database/: __init__.py  connection.py  schema.py
engram/engine/: __init__.py  compression.py  decay.py  embeddings.py  importance.py
engram/layers/: __init__.py  episodic.py  hive.py  semantic.py  working.py
engram/mcp/: __init__.py  server.py
engram/models/: __init__.py  memory.py
engram/tests/: __init__.py  test_api.py  test_auth.py
prompts/: 01_scaffold.md  02_config_and_db.md  03_models.md  04_decay_engine.md  05_embeddings.md  06_layers.md  07_api.md  08_tests.md  09_readme.md
skills/engram/: README.md  handler.py  skill.yaml
