[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engram"
version = "0.1.0"
description = "Local-first persistent memory engine for AI agents"
readme = "engram/README.md"
license = {text = "MIT (non-commercial), Commercial: contact info@neurall.io"}
authors = [
    {name = "Neurall", email = "info@neurall.io"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlite-vec>=0.1.2",
    "httpx>=0.25.0",
    "pytest>=7.0",
    "requests>=2.31.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25.0",
]

[project.scripts]
engram = "main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]